@@ -1,3 +1,8 @@
+2010-02-20  Manoel Rebelo Abranches <mrabran@br.ibm.com>
+
+	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Add delete and
+	backspace keys.
+
 2010-02-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* video/fb/video_fb.c (grub_video_fb_scroll): Fix a pixel size bug.
